# TollGate

./: .env.agora.frontend.example  .env.example  .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  PROJECT-PLAYBOOK.md  README.md  SECURITY.md  hackathon-ideas-playbook-uk.md  index.html  package-lock.json  package.json  qie-hackathon-2026-plan.md  sui-overflow-2026-plan.md  tsconfig.json  vercel.json  vite.config.ts
.github/workflows/: ci.yml
contracts/: .env.example  .gitignore  README.md  hardhat.config.cjs  package-lock.json  package.json
contracts/contracts/: AgentBudget.sol  AgentBudgetController.sol  AgentCreditRegistry.sol  AgentEscrow.sol  AgentIdentityRegistry.sol  AgentIntentSettler.sol  AgentReceiptRegistry.sol  AgentVault.sol  ArcMindRegistry.sol  CopyTradeEscrow.sol  (+8 more)
contracts/stylus-score/: Cargo.toml
contracts/stylus-score/src/: lib.rs
data/: receipts.db  receipts.db-shm  receipts.db-wal
docs/: AGORA-ACTIVE-EXECUTION-PLAN.md  AGORA-API-SIGNAL-RADAR.md  AGORA-LIVE-DEMO-RUNBOOK.md  AGORA-PRODUCTION-DEPLOYMENT.md  AGORA-SUBMISSION-PACK.md  ARC-AGORA-WINNING-PLAN.md  CHANGELOG.md  HACKATHON-NOTES.md  SECURITY.md  TRACK-PLAN.md  WORKSPACE-ANALYSIS.md  agent-payments-x402-universal-tz-uk.md
public/: manifest.webmanifest  robots.txt  sitemap.xml
scripts/: agora-live-smoke.mjs  agora-submission-summary.mjs  test-flow.js
server/: .env.agora.example  .env.example  README.md  package-lock.json  package.json  tsconfig.json
src/: App.tsx  app-state.ts  charts402.tsx  data.ts  icons402.tsx  main.tsx  styles.css  theme.css  types.ts  wallet.tsx
(+192 files in other folders)
