[package]
name = "agent-score-verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
stylus-sdk = { version = "0.6", features = ["export-abi"] }
alloy-primitives = { version = "0.7", default-features = false }

[features]
export-abi = ["stylus-sdk/export-abi"]
